force-app/main/default/objects/AccountContactRelation/fields/AccountContactID__c.field-meta.xml
<CustomField>
    <fullName>AccountContactID__c</fullName>
    <description>This field is used to store the Account ID of the Contact in the relation. This is used for integration with Poseidon.</description>
    <formula>Contact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Id</label>
    <type>Text</type>
</CustomField>