force-app/main/default/objects/AccountContactRelation/fields/IsByConversion__c.field-meta.xml
<CustomField>
      <fullName>IsByConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if record came in as part of data migration, false otherwise</description>
        <label>Is By Conversion</label>
        <type>Checkbox</type>
</CustomField>