force-app/main/default/objects/AccountContactRelation/fields/IsParentSynchedToPoseidon__c.field-meta.xml
<CustomField>
    <fullName>IsParentSynchedToPoseidon__c</fullName>
    <description>Used for Sending Family Details to Poseidon only if the related Account has Parent details.</description>
    <formula>Account.IsSyncedToPoseidon__c || Account.HasBooking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Synched To Poseidon</label>
    <type>Checkbox</type>
</CustomField>