force-app/main/default/objects/AccountContactRelation/fields/TotalBooking__c.field-meta.xml
<CustomField>
    <fullName>TotalBooking__c</fullName>
    <description>Used for Sending Family Details to Poseidon only if the related Account has Booking</description>
    <formula>Account.TotalBooking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalBooking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>